# tcp-to-http

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: README.md  carriage_return_char.py  read_bytes.py
src/tcp_to_http/: __init__.py  tcplistener.py  udpsender.py
